# triton-shared

./: CMakeLists.txt  README.md
include/triton-shared/Analysis/: MaskAnalysis.h  OpFoldResultUtils.h  PtrAnalysis.h  UseAnalysis.h
include/triton-shared/AnalysisStructured/: PtrAnalysis.h
include/triton-shared/Conversion/: CMakeLists.txt
include/triton-shared/Dialect/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Analysis/: MaskAnalysis.cpp  OpFoldResultUtils.cpp  PtrAnalysis.cpp  UseAnalysis.cpp
lib/AnalysisStructured/: PtrAnalysis.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/StructuredToMemref/: CMakeLists.txt  StructuredToMemref.cpp
lib/Conversion/TritonArithToLinalg/: CMakeLists.txt  TritonArithToLinalg.cpp  TritonArithToLinalgPass.cpp
lib/Conversion/TritonPtrToMemref/: CMakeLists.txt  TritonPtrToMemref.cpp
lib/Conversion/TritonToLinalg/: CMakeLists.txt  CollapseShape.cpp  ReconcilePtrCasts.cpp  TritonToLinalg.cpp  TritonToPtr.cpp
lib/Conversion/TritonToStructured/: CMakeLists.txt  TritonToStructured.cpp
lib/Conversion/TritonToUnstructured/: CMakeLists.txt  TritonToUnstructured.cpp
lib/Conversion/UnstructuredToMemref/: CMakeLists.txt  UnstructuredToMemref.cpp
test/Conversion/StructuredToMemref/: addptr_2d_example.mlir  addptr_add_value.mlir  addptr_chain.mlir  addptr_dim1.mlir  addptr_for_accumulation.mlir  addptr_for_expand_ptr.mlir  addptr_for_more_init_args.mlir  addptr_for_used_after_update.mlir  addptr_for_used_before_update.mlir  addptr_loopback.mlir  (+69 more)
tools/triton-shared-opt/: CMakeLists.txt  RegisterTritonSharedDialects.h
(+38 files in other folders)
